--- a/app/routes/_app/_app.module.css
+++ b/app/routes/_app/_app.module.css
@@ -117,7 +117,6 @@
   margin-left: 300px;
   flex-grow: 1;
   transition: margin-left 0.3s ease-in-out;
-  z-index: -1;
   will-change: margin-left;
 
   &.collapsed {
